--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tiny-owl-pages",
+  "homepage": "https://ryderdonahue.github.io/tiny-owl-pages/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -77,7 +78,9 @@
     "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts",
     "cleanAndSetup": "ts-node --project=./internals/ts-node.tsconfig.json ./internals/scripts/clean.ts",
     "prettify": "prettier --write",
-    "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js"
+    "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -123,5 +126,8 @@
         "statements": 90
       }
     }
+  },
+  "devDependencies": {
+    "gh-pages": "3.2.3"
   }
 }
