--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-owl-pages",
-  "homepage": "https://ryderdonahue.github.io/tiny-owl-pages/",
+  "homepage": "https://ryderdonahue.github.io/tiny-owl-pages",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -80,7 +80,7 @@
     "prettify": "prettier --write",
     "extract-messages": "i18next-scanner --config=internals/extractMessages/i18next-scanner.config.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -dir /build"
+    "deploy": "gh-pages -b gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
