--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "stylelint-processor-styled-components": "1.10.0",
     "ts-node": "10.0.0",
     "typescript": "4.2.2",
+    "ua-parser-js": "1.0.2",
     "web-vitals": "2.1.0"
   },
   "scripts": {
